// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bulletin should render audio correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c10 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c6:hover,
.c6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6:visited {
  color: #6E6E73;
}

.c0 {
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6,1fr);
  grid-column-gap: 1rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c3 {
  grid-column: 1 / span 6;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 0.25rem;
}

.c9 > svg {
  color: #FFFFFF;
  fill: currentColor;
}

.c8 {
  background-color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #FFFFFF;
  text-align: center;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem;
  padding-bottom: 1rem;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding: 0.5rem 0.5rem;
}

@media (min-width:63rem) {
  .c0 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 2;
  }
}

@media (max-width:37.4375rem) {
  .c1 {
    display: none;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-column: 3 / span 4;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    width: 6.125rem;
  }
}

@media (min-width:63rem) {
  .c8 {
    width: 100%;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    padding: 0.5rem 0;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    type="audio"
  >
    <img
      alt="Iron man"
      class="c2"
      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/11897/production/_106613817_999_al_.jpg"
    />
  </div>
  <div
    class="c3"
    type="audio"
  >
    <h3
      class="c4"
      type="audio"
    >
      <span
        class="c5"
      >
        Listen 
      </span>
      <a
        class="c6"
        href="https://bbc.co.uk"
      >
        This is the headline
      </a>
    </h3>
    <p
      class="c7"
      type="audio"
    >
      This is the summary text
    </p>
    <div
      aria-hidden="true"
      class="c8"
    >
      <span
        class="c9"
      >
        <svg
          class="c10"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      Listen
    </div>
  </div>
</div>
`;

exports[`Bulletin should render live audio correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c11 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c7 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:visited {
  color: #6E6E73;
}

.c6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.c0 {
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6,1fr);
  grid-column-gap: 1rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c3 {
  grid-column: 1 / span 6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 0.25rem;
}

.c10 > svg {
  color: #FFFFFF;
  fill: currentColor;
}

.c9 {
  background-color: #B80000;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #FFFFFF;
  text-align: center;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem;
  padding-bottom: 1rem;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding: 0.5rem 0.5rem;
}

@media (min-width:63rem) {
  .c0 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 2;
  }
}

@media (max-width:37.4375rem) {
  .c1 {
    display: none;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-column: 3 / span 4;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    width: 6.125rem;
  }
}

@media (min-width:63rem) {
  .c9 {
    width: 100%;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    padding: 0.5rem 0;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    type="audio"
  >
    <img
      alt="Iron man"
      class="c2"
      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/11897/production/_106613817_999_al_.jpg"
    />
  </div>
  <div
    class="c3"
    type="audio"
  >
    <h3
      class="c4"
      type="audio"
    >
      <span
        class="c5"
      >
        Listen LIVE 
      </span>
      <span
        aria-hidden="true"
        class="c6"
        dir="ltr"
      >
        LIVE
      </span>
      <a
        class="c7"
        href="https://bbc.co.uk"
      >
        This is the headline
      </a>
    </h3>
    <p
      class="c8"
      type="audio"
    >
      This is the summary text
    </p>
    <div
      aria-hidden="true"
      class="c9"
    >
      <span
        class="c10"
      >
        <svg
          class="c11"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      Listen
    </div>
  </div>
</div>
`;

exports[`Bulletin should render live video correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c11 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c7 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:visited {
  color: #6E6E73;
}

.c6 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(6,1fr);
  grid-column-gap: 1rem;
  padding: 0.5rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c3 {
  grid-column: 1 / span 6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 0.25rem;
}

.c10 > svg {
  color: #FFFFFF;
  fill: currentColor;
}

.c9 {
  background-color: #B80000;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #FFFFFF;
  text-align: center;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 1rem;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding: 0.5rem 0;
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 1rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 3;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-column: 4 / span 3;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    width: 6.125rem;
  }
}

@media (min-width:63rem) {
  .c9 {
    width: 100%;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    padding: 0 0 0.5rem 0;
  }
}

@media (min-width:63rem) {
  .c4 {
    padding-top: 0.5rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    type="video"
  >
    <img
      alt="Iron man"
      class="c2"
      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/11897/production/_106613817_999_al_.jpg"
    />
  </div>
  <div
    class="c3"
    type="video"
  >
    <h3
      class="c4"
      type="video"
    >
      <span
        class="c5"
      >
        Watch LIVE 
      </span>
      <span
        aria-hidden="true"
        class="c6"
        dir="ltr"
      >
        LIVE
      </span>
      <a
        class="c7"
        href="https://bbc.co.uk"
      >
        This is the headline
      </a>
    </h3>
    <p
      class="c8"
      type="video"
    >
      This is the summary text
    </p>
    <div
      aria-hidden="true"
      class="c9"
    >
      <span
        class="c10"
      >
        <svg
          class="c11"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </span>
      Watch
    </div>
  </div>
</div>
`;

exports[`Bulletin should render video correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c10 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c6:hover,
.c6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6:visited {
  color: #6E6E73;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(6,1fr);
  grid-column-gap: 1rem;
  padding: 0.5rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c3 {
  grid-column: 1 / span 6;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 0.25rem;
}

.c9 > svg {
  color: #FFFFFF;
  fill: currentColor;
}

.c8 {
  background-color: #222222;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #FFFFFF;
  text-align: center;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 1rem;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding: 0.5rem 0;
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 1rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 3;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    grid-column: 4 / span 3;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    width: 6.125rem;
  }
}

@media (min-width:63rem) {
  .c8 {
    width: 100%;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    padding: 0 0 0.5rem 0;
  }
}

@media (min-width:63rem) {
  .c4 {
    padding-top: 0.5rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    type="video"
  >
    <img
      alt="Iron man"
      class="c2"
      src="https://ichef.bbci.co.uk/news/660/cpsprodpb/11897/production/_106613817_999_al_.jpg"
    />
  </div>
  <div
    class="c3"
    type="video"
  >
    <h3
      class="c4"
      type="video"
    >
      <span
        class="c5"
      >
        Watch 
      </span>
      <a
        class="c6"
        href="https://bbc.co.uk"
      >
        This is the headline
      </a>
    </h3>
    <p
      class="c7"
      type="video"
    >
      This is the summary text
    </p>
    <div
      aria-hidden="true"
      class="c8"
    >
      <span
        class="c9"
      >
        <svg
          class="c10"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </span>
      Watch
    </div>
  </div>
</div>
`;
